--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 body {
   font: normal normal 13px/16px "Open Sans", sans-serif;
   background: #dfdfdf;
+  font-size: large;
 }
 
 .container {
@@ -24,7 +25,7 @@ input {
 
 #button {
   display: inline-block;
-  background-color: #fc999b;
+  background-color: #99b3fc;
   color: #ffffff;
   border-radius: 5px;
   text-align: center;
